Added another paragraph to "About Me"

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section>
             <h2>About Me</h2>
             <p>I'm about 6'5", I got a Bentley parked outside in the lecturers' parking. I also own a private jet. </p>
-            
+            <p>I recently bought a mansion on the beachside in Monaco, my neighbour is Cristiano ronaldo.</p>
         </section>
         <article>
             <h3>Latest Project</h3>
